# mcp-email

./: .env.template  .gitignore  CLAUDE.md  GPT-OSS-BRIDGE-SETUP.md  GPT-OSS-INTEGRATION.md  GUI-README.md  QWEN_PRODUCTION_REPORT.md  README.md  SD3_ROCM_INTEGRATION_REPORT.md  example-config.json  index.ts  install-service.sh  mcp-agents-server.service  mcp.config.ts  ollama-bridge.py  package-lock.json  package.json  test-mcp.js  tsconfig.json
rss-intel/backend/: Dockerfile  alembic.ini  analyze_content.py  create_sample_events.py  create_test_spam.py  debug_confidence.py  fix_auth.py  fix_confidence_issue.py  fix_dataclass_confidence.py  fix_feeds.py  fix_sort_confidence.py  fix_width_height.py  import_ai_blockchain_feeds.py  import_comprehensive_feeds.py  import_extended_crypto_feeds.py  import_feeds_direct.py  populate_weaviate.py  production_image_update.py  pyproject.toml  run_spam_detection.py  show_passwords.py  simple_analysis.py  test_hybrid_search.py  test_openai_rag.py  test_rag_engine.py  test_search_api.py  test_spam_detection.py  train_advanced_model.py  train_personalization.py  update_passwords.py
rss-intel/backend/alembic/: env.py
rss-intel/backend/app/: ab_testing.py  auth.py  auth_basic_secure.py  auth_secure.py  auth_simple.py  briefing_engine.py  cache_service.py  clustering.py  config.py  content_extractor.py  content_service.py  content_service_v2.py  deps.py  diagnostics.py  direct_rss_client.py  events.py  extraction_worker.py  freshrss_client.py  images.py  images2.py  images2_dataclass_fixed.py  images2_fixed.py  images2_sort_fixed.py  images2_width_height_fixed.py  import_feeds.py  learning_scheduler.py  main.py  notification_utils.py  notifications.py  personalization_service.py  proxy_utils.py  rag_engine.py  scheduler.py  schemas.py  scoring.py  spotlight_engine.py  store.py  utils.py  websocket_hub.py
rss-intel/backend/config/: image_rules.yml
rss-intel/backend/tests/: test_api.py  test_api_integration.py  test_images.py  test_images2.py  test_items_api.py  test_scoring.py
(+373 files in other folders)
